--- a/static/styles/islands.css
+++ b/static/styles/islands.css
@@ -6,6 +6,23 @@
 
 .island {
     position: relative;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 11;
+        width: 2rem;
+        height: 2rem;
+        margin: -1rem 0 0 -1rem;
+        background: var(--color-accent);
+        mask-image: url("/static/images/logo-white.svg");
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        mask-position: center;
+        animation: island-spin 0.8s linear infinite;
+    }
 }
 
 .island:not(:has(.island-content)) {
@@ -14,25 +31,16 @@
     background: var(--color-gray-1);
 }
 
-.island::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 11;
-    width: 2rem;
-    height: 2rem;
-    margin: -1rem 0 0 -1rem;
-    background: var(--color-accent);
-    mask-image: url("/static/images/logo-white.svg");
-    mask-size: contain;
-    mask-repeat: no-repeat;
-    mask-position: center;
-    animation: island-spin 0.8s linear infinite;
-}
+.island:has(.island-content) {
+    display: contents;
 
-.island:has(.island-content)::after {
-    display: none;
+    .island-content {
+        display: contents;
+    }
+
+    &::after {
+        display: none;
+    }
 }
 
 .island-error {
